repos/tiktok-archive/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiktok-archive
  labels:
    app.kubernetes.io/name: tiktok-archive
